crates/service/tests/diagnostics/snapshots/features__diagnostics__unused__field_unused.snap
---
source: crates/service/tests/diagnostics/unused.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 2,
          "character": 28
        },
        "end": {
          "line": 2,
          "character": 30
        }
      },
      "severity": 2,
      "code": "unused",
      "source": "wat",
      "message": "field `$x` is never used",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 2,
          "character": 43
        },
        "end": {
          "line": 2,
          "character": 50
        }
      },
      "severity": 2,
      "code": "unused",
      "source": "wat",
      "message": "field `1` is never used",
      "tags": [
        1
      ]
    }
  ]
}
