crates/service/tests/diagnostics/snapshots/features__diagnostics__unused__local_unused.snap
---
source: crates/service/tests/diagnostics/unused.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 2,
          "character": 27
        },
        "end": {
          "line": 2,
          "character": 29
        }
      },
      "severity": 2,
      "code": "unused",
      "source": "wat",
      "message": "`$l` is never used",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 2,
          "character": 42
        },
        "end": {
          "line": 2,
          "character": 45
        }
      },
      "severity": 2,
      "code": "unused",
      "source": "wat",
      "message": "`1` is never used",
      "tags": [
        1
      ]
    }
  ]
}
