crates/service/tests/diagnostics/snapshots/features__diagnostics__unused__memory_unused.snap
---
source: crates/service/tests/diagnostics/unused.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 2,
          "character": 3
        },
        "end": {
          "line": 2,
          "character": 9
        }
      },
      "severity": 2,
      "source": "wat",
      "message": "`0` is never used"
    },
    {
      "range": {
        "start": {
          "line": 3,
          "character": 10
        },
        "end": {
          "line": 3,
          "character": 12
        }
      },
      "severity": 2,
      "source": "wat",
      "message": "`$m` is never used"
    }
  ]
}
